--- a/server/package.json
+++ b/server/package.json
@@ -21,30 +21,32 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^11.1.3",
+    "@nestjs/axios": "^4.0.0",
+    "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^11.0.3",
-    "@nestjs/platform-express": "^11.1.3",
+    "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^11.2.0",
+    "@nestjs/terminus": "^9.2.2",
+    "axios": "^1.9.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
-    "dotenv": "^16.5.0",
-    "mongoose": "^8.15.2",
+    "mongoose": "^8.15.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0",
-    "swagger-ui-express": "^5.0.1"
+    "rxjs": "^7.2.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^11.1.3",
+    "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^16.0.0",
-    "@types/supertest": "^6.0.3",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
@@ -53,7 +55,7 @@
     "jest": "28.0.3",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
-    "supertest": "^7.1.1",
+    "supertest": "^6.1.3",
     "ts-jest": "28.0.1",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
