Add codebase for folders section

--- a/extension/tsconfig.json
+++ b/extension/tsconfig.json
@@ -22,7 +22,7 @@
       "@locales/*": ["src/locales/*"],
       "@pages/*": ["src/pages/*"],
       "@utils/*": ["src/utils/*"],
-      "@ui/*": ["src/uis/*"]
+      "@ui/*": ["src/ui/*"]
     }
   },
   "include": [
