Improve sidebar location and ui

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -18,7 +18,8 @@
     "128": "icon-128.png"
   },
   "permissions": [
-    "activeTab"
+    "activeTab",
+    "tabs"
   ],
   "content_scripts": [
     {
