Implement Basic UI for sidebar
* Add a bunch of components I will be using

* Add type declaration

* Inject Sidebar to web page

* Format server code to avoid vscode tslint complaining

* Remove not needed file

* Extract services used to interact with APIs

* Add codebase for folders section

* Add codebase for prompts section

* Glue components together as sidebar

* Remove not need background.js logic

* Fix import path error

* Place sidebar on right side

* Add .gitignore to avoid tracking dist file

* Add conversation navigation ui entry

* Add default url

* Improve sidebar location and ui

--- a/extension/tsconfig.json
+++ b/extension/tsconfig.json
@@ -21,7 +21,8 @@
       "@assets/*": ["src/assets/*"],
       "@locales/*": ["src/locales/*"],
       "@pages/*": ["src/pages/*"],
-      "@utils/*": ["src/utils/*"]
+      "@utils/*": ["src/utils/*"],
+      "@ui/*": ["src/ui/*"]
     }
   },
   "include": [
