--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
-  "name": "name in manifest.json",
-  "description": "description in manifest.json",
+  "name": "Deeepseek Helper",
+  "description": "Help your organize conversations in deeepseek",
   "options_ui": {
     "page": "src/pages/options/index.html"
   },
